# ESP32S3_SWD_PROG

./: .gitignore  CLAUDE.md  CMakeLists.txt  ESP32S3_SWD_PROG_build.bat  ESP32S3_SWD_PROG_clean.bat  ESP32S3_SWD_PROG_flash.bat  ESP32S3_SWD_PROG_fullflash.bat  ESP32S3_SWD_PROG_log.bat  ESP32S3_SWD_PROG_monitor.bat  ESP32S3_SWD_PROG_storage_flash.bat  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.usb
.github/workflows/: build.yml
components/adiv5/: CMakeLists.txt  adiv5.c  adiv5.h
components/avr_image/: CMakeLists.txt  avr_image.c  avr_image.h
components/avr_isp/: CMakeLists.txt  Kconfig  avr_isp.c  avr_isp.h
components/avr_pdi/: CMakeLists.txt  Kconfig  avr_pdi.c  avr_pdi.h
components/avr_tpi/: CMakeLists.txt  Kconfig  avr_tpi.c  avr_tpi.h
components/avr_updi/: CMakeLists.txt  Kconfig  avr_updi.c  avr_updi.h
components/cortexm_debug/: CMakeLists.txt  Kconfig  cortexm_debug.c  cortexm_debug.h
components/display_lcd/: CMakeLists.txt  display_lcd.c  display_lcd.h  idf_component.yml
components/display_oled/: CMakeLists.txt  display_oled.c  display_oled.h  oled_fonts.c  (+1 more)
flm_packs/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
reference/: AVR_PDI.md  AVR_TPI.md  AVR_UPDI.md  D (1937) cortexm SWD bring-up (adiv.txt  ESP32S3_SWD_PROG_Plan.md  ILI9488_LVGL_port.md  MILESTONE_SWD_HW.md  NX80_display_port.md  monitorlog.txt
tests/: README.md  run_tests.ps1  run_tests.sh  test_crc16.py  test_flm_extract.py  test_flm_targetdb_consistency.py
tools/: avr_palette_gen.py  flm_extract.py  render_oled_screens.py  serial_logger.py
(+51 files in other folders)
